--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 
 <body>
 
-    <div class="container d-flex flex-wrap justify-content-between aling-items-center p-2" id="box">
+    <div class="container d-flex flex-wrap aling-items-center p-2" id="box">
 
     </div>
+
+    <div class="container d-flex aling-items-center p-4">
+        <input type="text" placeholder="Name" id="new-user-name" class="px-2 border-primary rounded">
+        <input type="text" placeholder="Role" id="new-user-role" class="mx-2 px-2 border-primary rounded">
+        <button id="new-user-button" class="btn btn-primary px-4 py-1">Add</button>
+    </div>
+
 
     <script src="./js/app.js"></script>
 </body>
